fixed the problem of code not showing on web page

--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
 
-/* colors
-
-#FF8F00     yellow
-#BDD3DE     light grey
-
-
-*/
-
   html, body{
   margin:0;
   padding:0;
@@ -27,7 +19,31 @@
     background-color:rgb(20, 41, 53);
     width:100%;
     height:5vh;
-    line-height:5vh;
+    text-align:right;
+    margin-right:300px;
+    position: relative;
+    box-shadow: 0 8px 10px -2px rgba(0, 0, 0, 0.116);
+  }
+  header h3{
+    position: absolute;
+    padding:10px;
+    bottom:0;
+    top:0;
+    margin:auto;
+    background-color: rgb(20, 41, 53);
+    left:655px;
+  }
+  .header-line{
+    width:80%;
+    background-color:#55746F;
+    height: 2px;
+    border-radius: 50%;
+    position: absolute;
+    bottom:0;
+    top:0;
+    left:0;
+    right:0;
+    margin:auto;
   }
 
   .container{
@@ -47,6 +63,13 @@
     height:95vh;
     background-color:rgb(7, 18, 26);
     position: relative;
+  }
+  #left-aside{
+    box-shadow: 10px 0px 10px 1px rgba(0, 0, 0, 0.144);
+  }
+  #right-aside{
+    width:50%;
+    box-shadow: -10px 0px 10px 1px rgba(0, 0, 0, 0.137);
   }
   
   #snippet{
@@ -215,10 +238,10 @@
     position: absolute;
     left:0;
     right:0;
-    bottom:50px;
+    bottom:60px;
   }
   #right-line{
-    bottom:190px;
+    bottom:170px;
   }
   .auth{
     margin:0;
